tests/dataset/tpc-ds/compiler/c/q88.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int time_sk;
  int hour;
  int minute;
} time_dim_t;
typedef struct {
  int len;
  time_dim_t *data;
} time_dim_list_t;
time_dim_list_t create_time_dim_list(int len) {
  time_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(time_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int hd_demo_sk;
  int hd_dep_count;
  int hd_vehicle_count;
} household_demographic_t;
typedef struct {
  int len;
  household_demographic_t *data;
} household_demographic_list_t;
household_demographic_list_t create_household_demographic_list(int len) {
  household_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(household_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_store_sk;
  const char *s_store_name;
} store_t;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int sold_time_sk;
  int hdemo_sk;
  int store_sk;
  double qty;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

double count_range(list_int ssales, list_int tdim, int hour, int start_min,
                   int end_min) {
  double total = 0.0;
  for (int tmp1 = 0; tmp1 < ssales.len; tmp1++) {
    int ss = ssales.data[tmp1];
    for (int tmp2 = 0; tmp2 < tdim.len; tmp2++) {
      int t = tdim.data[tmp2];
      if ((ss.sold_time_sk == t.time_sk && t.hour == hour &&
           t.minute >= start_min && t.minute < end_min)) {
        total = total + ss.qty;
      }
    }
  }
  return total;
}

static double test_TPCDS_Q88_sample_result;
static void test_TPCDS_Q88_sample() {
  if (!(test_TPCDS_Q88_sample_result == 88)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  time_dim_t time_dim[] = {(time_dim_t){.time_sk = 1, .hour = 8, .minute = 30},
                           (time_dim_t){.time_sk = 2, .hour = 9, .minute = 0},
                           (time_dim_t){.time_sk = 3, .hour = 9, .minute = 30},
                           (time_dim_t){.time_sk = 4, .hour = 10, .minute = 0},
                           (time_dim_t){.time_sk = 5, .hour = 10, .minute = 30},
                           (time_dim_t){.time_sk = 6, .hour = 11, .minute = 0},
                           (time_dim_t){.time_sk = 7, .hour = 11, .minute = 30},
                           (time_dim_t){.time_sk = 8, .hour = 12, .minute = 0}};
  int time_dim_len = sizeof(time_dim) / sizeof(time_dim[0]);
  household_demographic_t household_demographics[] = {(household_demographic_t){
      .hd_demo_sk = 1, .hd_dep_count = 1, .hd_vehicle_count = 1}};
  int household_demographics_len =
      sizeof(household_demographics) / sizeof(household_demographics[0]);
  store_t store[] = {(store_t){.s_store_sk = 1, .s_store_name = "ese"}};
  int store_len = sizeof(store) / sizeof(store[0]);
  store_sale_t store_sales[] = {
      (store_sale_t){
          .sold_time_sk = 1, .hdemo_sk = 1, .store_sk = 1, .qty = 10.0},
      (store_sale_t){
          .sold_time_sk = 2, .hdemo_sk = 1, .store_sk = 1, .qty = 12.0},
      (store_sale_t){
          .sold_time_sk = 3, .hdemo_sk = 1, .store_sk = 1, .qty = 14.0},
      (store_sale_t){
          .sold_time_sk = 4, .hdemo_sk = 1, .store_sk = 1, .qty = 11.0},
      (store_sale_t){
          .sold_time_sk = 5, .hdemo_sk = 1, .store_sk = 1, .qty = 8.0},
      (store_sale_t){
          .sold_time_sk = 6, .hdemo_sk = 1, .store_sk = 1, .qty = 9.0},
      (store_sale_t){
          .sold_time_sk = 7, .hdemo_sk = 1, .store_sk = 1, .qty = 10.0},
      (store_sale_t){
          .sold_time_sk = 8, .hdemo_sk = 1, .store_sk = 1, .qty = 14.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  double h8_30_to_9 = count_range(store_sales, time_dim, 8, 30, 60);
  double h9_to_9_30 = count_range(store_sales, time_dim, 9, 0, 30);
  double h9_30_to_10 = count_range(store_sales, time_dim, 9, 30, 60);
  double h10_to_10_30 = count_range(store_sales, time_dim, 10, 0, 30);
  double h10_30_to_11 = count_range(store_sales, time_dim, 10, 30, 60);
  double h11_to_11_30 = count_range(store_sales, time_dim, 11, 0, 30);
  double h11_30_to_12 = count_range(store_sales, time_dim, 11, 30, 60);
  double h12_to_12_30 = count_range(store_sales, time_dim, 12, 0, 30);
  double result = h8_30_to_9 + h9_to_9_30 + h9_30_to_10 + h10_to_10_30 +
                  h10_30_to_11 + h11_to_11_30 + h11_30_to_12 + h12_to_12_30;
  _json_float(result);
  test_TPCDS_Q88_sample_result = result;
  test_TPCDS_Q88_sample();
  return 0;
}
